// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme.make should accept a theme name 1`] = `
Object {
  "breakpoints": Object {
    "large": "992px",
    "max": "1200px",
    "medium": "768px",
    "min": "320px",
    "mobile": "480px",
    "small": "480px",
  },
  "colors": Object {
    "action": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "bgInverse": Object {
      "active": Object {
        "alt": "rgb(0, 0, 0)",
        "base": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(0, 0, 0)",
        "base": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(0, 0, 0)",
        "base": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(89, 89, 89)",
        "base": "rgb(64, 64, 64)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "bgPrimary": Object {
      "active": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(255, 255, 255)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(247, 247, 247)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 165, 165)",
        "base": "rgb(191, 191, 191)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "bgSecondary": Object {
      "active": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "alt": "rgb(240, 240, 240)",
        "base": "rgb(247, 247, 247)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(232, 232, 232)",
        "base": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(163, 163, 163)",
        "base": "rgb(187, 187, 187)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "danger": Object {
      "active": Object {
        "alt": "rgb(186, 32, 47)",
        "base": "rgb(123, 21, 31)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(186, 32, 47)",
        "base": "rgb(220, 53, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(220, 53, 69)",
        "base": "rgb(186, 32, 47)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(155, 105, 110)",
        "base": "rgb(174, 90, 98)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "dark": Object {
      "active": Object {
        "alt": "rgb(38, 38, 38)",
        "base": "rgb(51, 51, 51)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(51, 51, 51)",
        "base": "rgb(26, 26, 26)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(51, 51, 51)",
        "base": "rgb(38, 38, 38)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(97, 97, 97)",
        "base": "rgb(76, 76, 76)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "info": Object {
      "active": Object {
        "alt": "rgb(18, 130, 147)",
        "base": "rgb(12, 86, 98)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(18, 130, 147)",
        "base": "rgb(23, 162, 184)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(23, 162, 184)",
        "base": "rgb(18, 130, 147)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(96, 138, 144)",
        "base": "rgb(75, 145, 156)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "light": Object {
      "active": Object {
        "alt": "rgb(232, 232, 232)",
        "base": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(161, 161, 161)",
        "base": "rgb(183, 183, 183)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "neutral": Object {
      "active": Object {
        "alt": "rgb(102, 102, 102)",
        "base": "rgb(67, 67, 67)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(102, 102, 102)",
        "base": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(127, 127, 127)",
        "base": "rgb(102, 102, 102)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(127, 127, 127)",
        "base": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "primary": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "prominent": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "secondary": Object {
      "active": Object {
        "alt": "rgb(0, 125, 225)",
        "base": "rgb(0, 83, 149)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(0, 125, 225)",
        "base": "rgb(26, 153, 255)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(26, 153, 255)",
        "base": "rgb(0, 125, 225)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(97, 135, 165)",
        "base": "rgb(77, 140, 191)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "selected": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "success": Object {
      "active": Object {
        "alt": "rgb(32, 134, 55)",
        "base": "rgb(21, 89, 37)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(32, 134, 55)",
        "base": "rgb(40, 167, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(40, 167, 69)",
        "base": "rgb(32, 134, 55)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(101, 139, 110)",
        "base": "rgb(84, 147, 98)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "tertiary": Object {
      "active": Object {
        "alt": "rgb(0, 122, 122)",
        "base": "rgb(0, 81, 81)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(0, 122, 122)",
        "base": "rgb(0, 153, 153)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(0, 153, 153)",
        "base": "rgb(0, 122, 122)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(89, 135, 135)",
        "base": "rgb(64, 140, 140)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "warning": Object {
      "active": Object {
        "alt": "rgb(210, 157, 0)",
        "base": "rgb(139, 104, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(210, 157, 0)",
        "base": "rgb(255, 193, 7)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 193, 7)",
        "base": "rgb(210, 157, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 147, 91)",
        "base": "rgb(191, 160, 67)",
        "readable": "rgb(0, 0, 0)",
      },
    },
  },
  "elements": Object {
    "blocks": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "contained": false,
      "cursor": "default",
      "font": "text",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
    },
    "buttons": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "bgPrimary",
      "cursor": "pointer",
      "font": "control",
      "outlined": false,
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "none",
      "typographic": false,
      "variant": "button",
    },
    "controls": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "bgPrimary",
      "cursor": "default",
      "font": "control",
      "outlined": false,
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "none",
      "typographic": false,
    },
    "layouts": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "cursor": "default",
      "font": "text",
      "gap": "small",
      "gapped": true,
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
    },
    "links": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "action",
      "cursor": "pointer",
      "font": "link",
      "outlined": false,
      "padding": Object {
        "bottom": "none",
        "left": "none",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": true,
      "variant": "link",
    },
    "lists": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "bgInverse",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "none",
            "width": "none",
          },
          "left": Object {
            "style": "none",
            "width": "none",
          },
          "right": Object {
            "style": "none",
            "width": "none",
          },
          "top": Object {
            "style": "none",
            "width": "none",
          },
        },
        "color": "bgInverse",
        "cursor": "text",
        "font": "text",
        "marker": Object {},
        "outlined": false,
        "padding": Object {
          "bottom": "none",
          "left": "xSmall",
          "right": "none",
          "top": "none",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": true,
      },
      "cursor": "text",
      "font": "text",
      "marker": Object {},
      "outlined": false,
      "padding": Object {
        "bottom": "none",
        "left": "xSmall",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": true,
    },
    "navs": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "none",
            "width": "none",
          },
          "right": Object {
            "style": "none",
            "width": "none",
          },
          "top": Object {
            "style": "none",
            "width": "none",
          },
        },
        "color": "selected",
        "cursor": "default",
        "font": "compact",
        "outlined": false,
        "padding": Object {
          "bottom": "small",
          "left": "medium",
          "right": "medium",
          "top": "small",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": false,
      },
      "cursor": "pointer",
      "font": "compact",
      "outlined": false,
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": false,
    },
    "notifications": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "info",
      "cursor": "default",
      "font": "text",
      "outlined": false,
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "none",
      "typographic": false,
    },
    "surfaces": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "bgPrimary",
      "cursor": "default",
      "font": "text",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "box",
    },
    "tables": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "solid",
            "width": "tiny",
          },
          "right": Object {
            "style": "solid",
            "width": "tiny",
          },
          "top": Object {
            "style": "solid",
            "width": "tiny",
          },
        },
        "color": "bgSecondary",
        "cursor": "text",
        "font": "text",
        "outlined": false,
        "padding": Object {
          "bottom": "none",
          "left": "xSmall",
          "right": "none",
          "top": "none",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": false,
      },
      "cursor": "text",
      "font": "text",
      "headerItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "solid",
            "width": "tiny",
          },
          "right": Object {
            "style": "solid",
            "width": "tiny",
          },
          "top": Object {
            "style": "solid",
            "width": "tiny",
          },
        },
        "color": "bgPrimary",
        "cursor": "text",
        "font": "strong",
        "outlined": false,
        "padding": Object {
          "bottom": "none",
          "left": "xSmall",
          "right": "none",
          "top": "none",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": false,
      },
      "outlined": false,
      "padding": Object {
        "bottom": "none",
        "left": "xSmall",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": false,
    },
  },
  "fonts": Object {
    "code": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Monaco, monospace",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "compact": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "control": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "emphasized": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "h1": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "3.21em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h2": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "2.36em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h3": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.64em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h4": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.29em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h5": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.15em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h6": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "heading": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "label": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "legal": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Times New Roman, serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "0.75em",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "link": Object {
      "align": "left",
      "decoration": Object {
        "line": "underline",
        "style": "solid",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "paragraph": Object {
      "align": "justify",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "quote": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "strong": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "text": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
  },
  "name": "example-theme",
  "shadows": Object {
    "box": Object {
      "alpha": 0.75,
      "blur": 4,
      "inset": false,
      "spread": 1,
      "x": 1,
      "y": 1,
    },
    "drop": Object {
      "alpha": 0.75,
      "blur": 4,
      "x": 1,
      "y": 1,
    },
    "inset": Object {
      "alpha": 0.75,
      "blur": 4,
      "inset": true,
      "spread": 0,
      "x": 1,
      "y": 1,
    },
    "outline": 1,
    "text": Object {
      "alpha": 0.4,
      "blur": 2,
      "x": 1,
      "y": 1,
    },
  },
  "sizes": Object {
    "giant": "64px",
    "large": "24px",
    "medium": "16px",
    "none": "0px",
    "small": "12px",
    "tiny": "2px",
    "xLarge": "32px",
    "xSmall": "8px",
    "xxLarge": "48px",
    "xxSmall": "4px",
  },
}
`;

exports[`Theme.make should match snapshot 1`] = `
Object {
  "breakpoints": Object {
    "large": "992px",
    "max": "1200px",
    "medium": "768px",
    "min": "320px",
    "mobile": "480px",
    "small": "480px",
  },
  "colors": Object {
    "action": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "bgInverse": Object {
      "active": Object {
        "alt": "rgb(0, 0, 0)",
        "base": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(0, 0, 0)",
        "base": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(0, 0, 0)",
        "base": "rgb(0, 0, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(89, 89, 89)",
        "base": "rgb(64, 64, 64)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "bgPrimary": Object {
      "active": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(255, 255, 255)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(247, 247, 247)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 165, 165)",
        "base": "rgb(191, 191, 191)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "bgSecondary": Object {
      "active": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "alt": "rgb(240, 240, 240)",
        "base": "rgb(247, 247, 247)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(232, 232, 232)",
        "base": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(163, 163, 163)",
        "base": "rgb(187, 187, 187)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "danger": Object {
      "active": Object {
        "alt": "rgb(186, 32, 47)",
        "base": "rgb(123, 21, 31)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(186, 32, 47)",
        "base": "rgb(220, 53, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(220, 53, 69)",
        "base": "rgb(186, 32, 47)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(155, 105, 110)",
        "base": "rgb(174, 90, 98)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "dark": Object {
      "active": Object {
        "alt": "rgb(38, 38, 38)",
        "base": "rgb(51, 51, 51)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(51, 51, 51)",
        "base": "rgb(26, 26, 26)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(51, 51, 51)",
        "base": "rgb(38, 38, 38)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(97, 97, 97)",
        "base": "rgb(76, 76, 76)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "info": Object {
      "active": Object {
        "alt": "rgb(18, 130, 147)",
        "base": "rgb(12, 86, 98)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(18, 130, 147)",
        "base": "rgb(23, 162, 184)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(23, 162, 184)",
        "base": "rgb(18, 130, 147)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(96, 138, 144)",
        "base": "rgb(75, 145, 156)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "light": Object {
      "active": Object {
        "alt": "rgb(232, 232, 232)",
        "base": "rgb(224, 224, 224)",
        "readable": "rgb(0, 0, 0)",
      },
      "base": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(240, 240, 240)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(224, 224, 224)",
        "base": "rgb(232, 232, 232)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(161, 161, 161)",
        "base": "rgb(183, 183, 183)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "neutral": Object {
      "active": Object {
        "alt": "rgb(102, 102, 102)",
        "base": "rgb(67, 67, 67)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(102, 102, 102)",
        "base": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(127, 127, 127)",
        "base": "rgb(102, 102, 102)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(127, 127, 127)",
        "base": "rgb(127, 127, 127)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "primary": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "prominent": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "secondary": Object {
      "active": Object {
        "alt": "rgb(0, 125, 225)",
        "base": "rgb(0, 83, 149)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(0, 125, 225)",
        "base": "rgb(26, 153, 255)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(26, 153, 255)",
        "base": "rgb(0, 125, 225)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(97, 135, 165)",
        "base": "rgb(77, 140, 191)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "selected": Object {
      "active": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(135, 90, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(204, 136, 0)",
        "base": "rgb(255, 170, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 170, 0)",
        "base": "rgb(204, 136, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 140, 89)",
        "base": "rgb(191, 149, 64)",
        "readable": "rgb(0, 0, 0)",
      },
    },
    "success": Object {
      "active": Object {
        "alt": "rgb(32, 134, 55)",
        "base": "rgb(21, 89, 37)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(32, 134, 55)",
        "base": "rgb(40, 167, 69)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(40, 167, 69)",
        "base": "rgb(32, 134, 55)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(101, 139, 110)",
        "base": "rgb(84, 147, 98)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "tertiary": Object {
      "active": Object {
        "alt": "rgb(0, 122, 122)",
        "base": "rgb(0, 81, 81)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(0, 122, 122)",
        "base": "rgb(0, 153, 153)",
        "readable": "rgb(255, 255, 255)",
      },
      "hover": Object {
        "alt": "rgb(0, 153, 153)",
        "base": "rgb(0, 122, 122)",
        "readable": "rgb(255, 255, 255)",
      },
      "inactive": Object {
        "alt": "rgb(89, 135, 135)",
        "base": "rgb(64, 140, 140)",
        "readable": "rgb(255, 255, 255)",
      },
    },
    "warning": Object {
      "active": Object {
        "alt": "rgb(210, 157, 0)",
        "base": "rgb(139, 104, 0)",
        "readable": "rgb(255, 255, 255)",
      },
      "base": Object {
        "alt": "rgb(210, 157, 0)",
        "base": "rgb(255, 193, 7)",
        "readable": "rgb(0, 0, 0)",
      },
      "hover": Object {
        "alt": "rgb(255, 193, 7)",
        "base": "rgb(210, 157, 0)",
        "readable": "rgb(0, 0, 0)",
      },
      "inactive": Object {
        "alt": "rgb(165, 147, 91)",
        "base": "rgb(191, 160, 67)",
        "readable": "rgb(0, 0, 0)",
      },
    },
  },
  "elements": Object {
    "blocks": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "contained": false,
      "cursor": "default",
      "font": "text",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
    },
    "buttons": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "bgPrimary",
      "cursor": "pointer",
      "font": "control",
      "outlined": false,
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "none",
      "typographic": false,
      "variant": "button",
    },
    "controls": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "bgPrimary",
      "cursor": "default",
      "font": "control",
      "outlined": false,
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "none",
      "typographic": false,
    },
    "layouts": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "cursor": "default",
      "font": "text",
      "gap": "small",
      "gapped": true,
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
    },
    "links": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "action",
      "cursor": "pointer",
      "font": "link",
      "outlined": false,
      "padding": Object {
        "bottom": "none",
        "left": "none",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": true,
      "variant": "link",
    },
    "lists": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "color": "bgInverse",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "none",
            "width": "none",
          },
          "left": Object {
            "style": "none",
            "width": "none",
          },
          "right": Object {
            "style": "none",
            "width": "none",
          },
          "top": Object {
            "style": "none",
            "width": "none",
          },
        },
        "color": "bgInverse",
        "cursor": "text",
        "font": "text",
        "marker": Object {},
        "outlined": false,
        "padding": Object {
          "bottom": "none",
          "left": "xSmall",
          "right": "none",
          "top": "none",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": true,
      },
      "cursor": "text",
      "font": "text",
      "marker": Object {},
      "outlined": false,
      "padding": Object {
        "bottom": "none",
        "left": "xSmall",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": true,
    },
    "navs": Object {
      "border": Object {
        "bottom": Object {
          "style": "none",
          "width": "none",
        },
        "left": Object {
          "style": "none",
          "width": "none",
        },
        "right": Object {
          "style": "none",
          "width": "none",
        },
        "top": Object {
          "style": "none",
          "width": "none",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "none",
            "width": "none",
          },
          "right": Object {
            "style": "none",
            "width": "none",
          },
          "top": Object {
            "style": "none",
            "width": "none",
          },
        },
        "color": "selected",
        "cursor": "default",
        "font": "compact",
        "outlined": false,
        "padding": Object {
          "bottom": "small",
          "left": "medium",
          "right": "medium",
          "top": "small",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": false,
      },
      "cursor": "pointer",
      "font": "compact",
      "outlined": false,
      "padding": Object {
        "bottom": "small",
        "left": "medium",
        "right": "medium",
        "top": "small",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": false,
    },
    "notifications": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "info",
      "cursor": "default",
      "font": "text",
      "outlined": false,
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "none",
      "typographic": false,
    },
    "surfaces": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "color": "bgPrimary",
      "cursor": "default",
      "font": "text",
      "padding": Object {
        "bottom": "xSmall",
        "left": "xSmall",
        "right": "xSmall",
        "top": "xSmall",
      },
      "radius": Object {
        "bottomLeft": "tiny",
        "bottomRight": "tiny",
        "topLeft": "tiny",
        "topRight": "tiny",
      },
      "shadow": "box",
    },
    "tables": Object {
      "border": Object {
        "bottom": Object {
          "style": "solid",
          "width": "tiny",
        },
        "left": Object {
          "style": "solid",
          "width": "tiny",
        },
        "right": Object {
          "style": "solid",
          "width": "tiny",
        },
        "top": Object {
          "style": "solid",
          "width": "tiny",
        },
      },
      "breakpoint": "mobile",
      "color": "bgPrimary",
      "currentItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "solid",
            "width": "tiny",
          },
          "right": Object {
            "style": "solid",
            "width": "tiny",
          },
          "top": Object {
            "style": "solid",
            "width": "tiny",
          },
        },
        "color": "bgSecondary",
        "cursor": "text",
        "font": "text",
        "outlined": false,
        "padding": Object {
          "bottom": "none",
          "left": "xSmall",
          "right": "none",
          "top": "none",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": false,
      },
      "cursor": "text",
      "font": "text",
      "headerItem": Object {
        "border": Object {
          "bottom": Object {
            "style": "solid",
            "width": "tiny",
          },
          "left": Object {
            "style": "solid",
            "width": "tiny",
          },
          "right": Object {
            "style": "solid",
            "width": "tiny",
          },
          "top": Object {
            "style": "solid",
            "width": "tiny",
          },
        },
        "color": "bgPrimary",
        "cursor": "text",
        "font": "strong",
        "outlined": false,
        "padding": Object {
          "bottom": "none",
          "left": "xSmall",
          "right": "none",
          "top": "none",
        },
        "radius": Object {
          "bottomLeft": "none",
          "bottomRight": "none",
          "topLeft": "none",
          "topRight": "none",
        },
        "shadow": "none",
        "typographic": false,
      },
      "outlined": false,
      "padding": Object {
        "bottom": "none",
        "left": "xSmall",
        "right": "none",
        "top": "none",
      },
      "radius": Object {
        "bottomLeft": "none",
        "bottomRight": "none",
        "topLeft": "none",
        "topRight": "none",
      },
      "shadow": "none",
      "typographic": false,
    },
  },
  "fonts": Object {
    "code": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Monaco, monospace",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "compact": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "control": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "emphasized": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "h1": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "3.21em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h2": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "2.36em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h3": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.64em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h4": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.29em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h5": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1.15em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "h6": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "1em",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "heading": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "label": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "legal": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Times New Roman, serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "0.75em",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "link": Object {
      "align": "left",
      "decoration": Object {
        "line": "underline",
        "style": "solid",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "paragraph": Object {
      "align": "justify",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "0 0 1em 0",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "quote": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "italic",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
    "strong": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 700,
    },
    "text": Object {
      "align": "left",
      "decoration": Object {
        "line": "none",
        "style": "",
      },
      "family": "Helvetica, sans-serif",
      "indent": "",
      "kerning": "normal",
      "letting": "1.6em",
      "size": "medium",
      "spacing": "",
      "style": "normal",
      "tracking": "",
      "transform": "none",
      "weight": 400,
    },
  },
  "name": "horns-theme",
  "shadows": Object {
    "box": Object {
      "alpha": 0.75,
      "blur": 4,
      "inset": false,
      "spread": 1,
      "x": 1,
      "y": 1,
    },
    "drop": Object {
      "alpha": 0.75,
      "blur": 4,
      "x": 1,
      "y": 1,
    },
    "inset": Object {
      "alpha": 0.75,
      "blur": 4,
      "inset": true,
      "spread": 0,
      "x": 1,
      "y": 1,
    },
    "outline": 1,
    "text": Object {
      "alpha": 0.4,
      "blur": 2,
      "x": 1,
      "y": 1,
    },
  },
  "sizes": Object {
    "giant": "64px",
    "large": "24px",
    "medium": "16px",
    "none": "0px",
    "small": "12px",
    "tiny": "2px",
    "xLarge": "32px",
    "xSmall": "8px",
    "xxLarge": "48px",
    "xxSmall": "4px",
  },
}
`;
